--- a/.github/workflows/main-test.yml
+++ b/.github/workflows/main-test.yml
@@ -16,18 +16,34 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Install SSH Key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.SSH_PRIVATE_KEY }} 
-          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
-          
       - name: Adding Known Hosts
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Configure SSH
         run: |
-          dig +short myip.opendns.com @resolver1.opendns.com
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          mkdir -p ~/.ssh/
+          echo "$SSH_KEY" > ~/.ssh/staging.key
+          chmod 600 ~/.ssh/staging.key
+          cat >>~/.ssh/config <<END
+          Host staging
+            HostName $SSH_HOST
+            User $SSH_USER
+            IdentityFile ~/.ssh/staging.key
+          END
+        env:
+          SSH_USER: ${{ secrets.SSH_USER }}
+          SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
+          
+      - name: Try Run Commands
+        run: ssh staging 'dig +short myip.opendns.com @resolver1.opendns.com'
+
+      #- name: Stop the server
+      #  run: ssh staging 'sudo systemctl stop my-application'
+
+      #- name: Check out the source
+        run: ssh staging 'cd my-application && git fetch && git reset --hard origin/master'
+
+      #- name: Start the server
+      #  if: ${{ always() }}
+      #  run: ssh staging 'sudo systemctl start my-application'
