--- a/.github/workflows/main-test.yml
+++ b/.github/workflows/main-test.yml
@@ -42,7 +42,7 @@ jobs:
       #  run: ssh staging 'sudo systemctl stop my-application'
 
       #- name: Check out the source
-        run: ssh staging 'cd my-application && git fetch && git reset --hard origin/master'
+      #  run: ssh staging 'cd my-application && git fetch && git reset --hard origin/master'
 
       #- name: Start the server
       #  if: ${{ always() }}
